--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/simple-grid.min.css">
-    <link rel="stylesheet" href="/greet.css">
+    <link rel="stylesheet" href="simple-grid.min.css">
+    <link rel="stylesheet" href="greet.css">
     <title>greetings widget</title>
 </head>
 <body>
@@ -62,8 +62,8 @@
         </div>
 
     </div>
-    <script src="/greet.js" charset="utf-8"></script>
-    <script src="/greetDom.js" charset="utf-8"></script>
+    <script src="greet.js" charset="utf-8"></script>
+    <script src="greetDom.js" charset="utf-8"></script>
     
 </body>
 </html>
