--- a/test/test.html
+++ b/test/test.html
@@ -14,8 +14,8 @@
         mocha.setup('bdd');
         var assert = chai.assert;
     </script>
-    <script src="greet2.js" charset="utf-8"></script>
-    <script src="test.js" charset="utf-8"></script>
+    <script src="js/greet2.js" charset="utf-8"></script>
+    <script src="test/test.js" charset="utf-8"></script>
     <script>
         mocha.checkLeaks();
         mocha.run();
