--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <span class="greetUserName" value=""> </span>
                     </center>
                 </div>
-                <form action="">
+                <form class = "textbox" action="">
                    <label for="name">Name:</label>
                    
                    <input type="text" name="name" id="" class="nameText" value="">
